Table persons {
  id uuid [pk]
  full_name text [not null]
  email text [unique]
  created_at timestamp [not null]
}

Table users {
  person_id uuid [pk, not null]
  username text [unique, not null]
  password_hash text [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table members {
  person_id uuid [pk, not null]
  joined_at date
  metadata jsonb
}

Table roles {
  id smallint [pk]
  name text [unique, not null]
  description text
}

Table user_roles {
  user_id uuid [not null]
  role_id smallint [not null]

  Indexes {
    (user_id, role_id) [unique]
  }
}

Table sessions {
  id uuid [pk]
  user_id uuid [not null]
  login_at timestamp [not null]
  logout_at timestamp
  ip_address inet
  user_agent text
}

Table audit_log {
  id bigserial [pk]
  user_id uuid
  action text [not null]
  entity text [not null]
  entity_id uuid
  old_data jsonb
  new_data jsonb
  created_at timestamp [not null]
}

Table projects {
  id uuid [pk]
  name text [not null]
  description text
  status text
  metadata jsonb
  created_at timestamp [not null]
}

Table contribution_types {
  id smallint [pk]
  name text [unique, not null]
}

Table contributions {
  id uuid [pk]
  member_id uuid [not null]
  project_id uuid [not null]
  type_id smallint [not null]
  amount numeric
  description text
  metadata jsonb
  created_at timestamp [not null]
}

Table activity_statuses {
  id smallint [pk]
  name text [unique, not null]
  description text
  is_final boolean [not null, default: false]
}

Table activities {
  id uuid [pk]
  project_id uuid [not null]
  status_id smallint [not null]
  name text [not null]
  description text
  start_date date
  end_date date
  created_at timestamp [not null]
}

Table activity_assignees {
  activity_id uuid [not null]
  person_id uuid [not null]
  assigned_at timestamp [not null]

  Indexes {
    (activity_id, person_id) [unique]
  }
}

Table activity_logs {
  id bigserial [pk]
  activity_id uuid [not null]
  author_person_id uuid
  message text [not null]
  created_at timestamp [not null]
}

/*
 Subdominio específico: materiales para actividades
 Ejemplo: paellero, montaje, logística
*/
Table activity_materials {
  id uuid [pk]
  activity_id uuid [not null]
  name text [not null]
  quantity numeric
  unit text
  notes text
}

/* Relations */
/* Inheritance / specialization */
/* FK users.person_id → persons.id */
/* Garantiza que todo usuario del sistema corresponde */
/* a una persona existente. */
Ref: users.person_id > persons.id 

/* FK contributions.member_id → members.person_id*/
/* Solo las personas que son miembros pueden realizar aportaciones.*/
Ref: members.person_id > persons.id

/* Security */
Ref: user_roles.user_id > users.person_id
Ref: user_roles.role_id > roles.id
Ref: sessions.user_id > users.person_id
Ref: audit_log.user_id > users.person_id

/* Business */
Ref: contributions.member_id > members.person_id
Ref: contributions.project_id > projects.id
Ref: contributions.type_id > contribution_types.id

/* Projects activities */
Ref: activities.project_id > projects.id
Ref: activity_assignees.activity_id > activities.id
Ref: activity_assignees.person_id > persons.id
Ref: activity_logs.activity_id > activities.id
Ref: activity_logs.author_person_id > persons.id
Ref: activity_materials.activity_id > activities.id
Ref: activities.status_id > activity_statuses.id